# northpoint.app

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: pr.yml
apps/ai/: .dockerignore  Dockerfile  README.md  dev.sh  main.py  package.json  pyproject.toml
apps/web/: .env.example  eslint.config.mjs  next.config.ts  package.json  proxy.ts  vercel.json  vitest.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/app/: app-nav.tsx  page.tsx
apps/web/app/login/: login-form.tsx  page.tsx
apps/web/app/onboarding/: actions.ts  onboarding-form.tsx  page.tsx
apps/web/lib/: account.ts  relative-time.ts
apps/web/lib/ai/: anthropic.ts  apply-patch-tool.test.ts  apply-patch-tool.ts  chat-storage.ts  config.ts  editor-chat-prompt.test.ts  editor-chat-prompt.ts
apps/web/lib/editor/: Editor.tsx  Render.tsx  applyAIEdit.test.ts  applyAIEdit.ts  editor-canvas.css  index.ts  normalize.test.ts  normalize.ts  puck-adapter.test.ts  puck-adapter.ts  types.ts
apps/web/lib/import/: parse-site.test.ts  parse-site.ts
apps/web/lib/site-pages/: path.test.ts  path.ts
apps/web/lib/storage/: upload-image.test.ts  upload-image.ts
apps/web/prompts/: editor-chat-v1.md  editor-chat-v2.md
docs/: CLEANUP_QA_DATA.sql  DEPLOYMENT.md  E4_STORAGE_BUCKET_DESIGN.md  PHASE_1.md  PLAN.md  SPIKE_E1_PUCK.md  SUPABASE_DASHBOARD_SETUP.md
playwright/: SKILL.md  package.json  playwright.config.ts  tsconfig.json
playwright/tests/: debug-supabase.spec.ts
(+38 files in other folders)
