[project]
name = "northpoint-ai"
version = "0.0.0"
description = "AI / agent service for northpoint (placeholder)."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.0,<0.137.0",
  "uvicorn[standard]>=0.47.0,<0.48.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
